--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
                 <div class="anketa-form anketa-form-black">
                     <label class="text-anketa text-anketa7" for="from">Откуда:</label><br>
                     <select class="text-text text-anketa7" id="from" name="from" required>
-                        <option value="Барселона">Барселона</option>
-                        <option value="Мадрид">Мадрид</option>
-                        <option value="Валенсия">Валенсия</option>
-                        <option value="Мурсия">Мурсия</option>
-                        <option value="Малага">Малага</option>
+                        <option value="Берлин">Берлин</option>
+                        <option value="Дюссельдорф">Дюссельдорф</option>
+                        <option value="Мюнхен">Мюнхен</option>
+                        <option value="Дортмунд">Дортмунд</option>
+                        <option value="Франкфурт-на-Майне">Франкфурт-на-Майне</option>
+                        <option value="Кельн">Кельн</option>
                     </select><br><br>
                 </div>
                 <div class="anketa-form anketa-form-black">
                     <label class="text-anketa text-anketa7" for="to">Куда:</label><br>
                     <select class="text-text text-anketa7" id="to" name="to" required>
-                        <option value="Мадрид">Мадрид</option>
-                        <option value="Барселона">Барселона</option>
-                        <option value="Валенсия">Валенсия</option>
-                        <option value="Мурсия">Мурсия</option>
-                        <option value="Малага">Малага</option>
-                        <option value="Аэропорт-Барселона–Эль-Прат-им-Жозепа-Таррадельяса">Аэропорт Барселона–Эль-Прат
-                            им. Жозепа Таррадельяса</option>
-                        <option value="Андорра">Андорра</option>
-                        <option value="Outlet-La-Rocca-village">Outlet La Rocca village</option>
-                        <option value="Севилья">Севилья</option>
-                        <option value="Сан-Себастьян">Сан-Себастьян</option>
-                        <option value="Бильбао">Бильбао</option>
+                        <option value="Дрезден">Дрезден</option>
+                        <option value="Берлин">Берлин</option>
+                        <option value="Дюссельдорф">Дюссельдорф</option>
+                        <option value="Мюнхен">Мюнхен</option>
+                        <option value="Дортмунд">Дортмунд</option>
+                        <option value="Франкфурт-на-Майне">Франкфурт-на-Майне</option>
+                        <option value="Кельн">Кельн</option>
+                        <option value="Штутгарт">Штутгарт</option>
+                        <option value="Нюрнберг">Нюрнберг</option>
+                        <option value="Гамбург">Гамбург</option>
+                        <option value="Эссен">Эссен</option>
                     </select><br><br>
                 </div>
             </div>
